--- a/src/containers/pdp/components/productDetails/styles.scss
+++ b/src/containers/pdp/components/productDetails/styles.scss
@@ -179,6 +179,9 @@
     border-bottom: lightgrey solid 1px;
     //padding: 10px;
     font-weight:normal;
+    a {
+        color: #987E56;
+    }
 }
 
 .sku {
@@ -280,7 +283,7 @@
     // display: inline-flex;
     // background-color: #f1f1f1;
     // border-radius: 10px;
-    padding: 2px 0;
+    // padding: 2px 0;
     // font-size: 12px;
     // line-height: 12px;
 }
