--- a/src/components/WishlistButton/stylespdp.scss
+++ b/src/components/WishlistButton/stylespdp.scss
@@ -26,8 +26,8 @@
         border: $gold 1.25px;
         color:$gold;
         cursor: pointer;
-        margin-top: 5px;
-        margin-bottom: 5px;
+        // margin-top: 5px;
+        // margin-bottom: 5px;
         &:hover {
             color: $gold;           
         }
