--- a/src/containers/pdp/components/productDetails/styles.scss
+++ b/src/containers/pdp/components/productDetails/styles.scss
@@ -234,7 +234,7 @@
         left: 0;
         right: 0;
         z-index: 6;
-        flex-direction: row-reverse;
+        // flex-direction: row-reverse;
         margin: 0;
     }
 
