PDP Main Image Slider

--- a/src/components/ProductCounter/styles.scss
+++ b/src/components/ProductCounter/styles.scss
@@ -38,13 +38,13 @@ z-index: 10;
 
 .counterstyle {
     background: #fff 0% 0% no-repeat padding-box;
-    top: 6%;
+    top: 25px;
     height: 24px;
     background-color: white;
     border-radius: 19px;
     box-shadow: 3px 3px 10px #00000029;
     opacity: 1;
-    right: 16px;
+    right: 25px;
     color: #D8D8D8;
     position: absolute;
     .counter {
