--- a/src/components/ProductCounter/styles.scss
+++ b/src/components/ProductCounter/styles.scss
@@ -57,6 +57,7 @@ z-index: 10;
         align-items: center;
         justify-content: space-between;
         padding: 0 10px;
+        font-weight: bold;
         .counter-number {
             font-family: $font-Lato;
             display:flex;
