--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -295,6 +295,7 @@ input[type="time"]::-webkit-calendar-picker-indicator{
     left: 0;
     font-size: 60px;
     display: none;
+    color: #E5E5E5;
     &:hover{
         cursor: pointer;
     }
@@ -310,6 +311,7 @@ input[type="time"]::-webkit-calendar-picker-indicator{
     right: 0;
     font-size: 60px;
     display: none;
+    color: #E5E5E5;
     &:hover{
         cursor: pointer;
     }
