--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -38,4 +38,8 @@
     &:active {
         color: #fff;
     }
+    &.notify-me-cta{
+        background-color: #9F9F9F;
+        border: none;
+    }
 }
