--- a/src/components/NotifyMePopup/styles.scss
+++ b/src/components/NotifyMePopup/styles.scss
@@ -71,6 +71,9 @@
     font-family: $font-Montserrat;
     font-size: 12px;
     color:$charcoal19;
+    div {
+        width:133px;
+    }
 }
 
 .quantity-wrapper {
@@ -105,6 +108,8 @@
     position: absolute;
     bottom: 0;
     left: 0;
+    background-color: $aquablue !important;
+    color: white;
 }
 
 .success-msg {
