--- a/src/components/NotifyMePopup/styles.scss
+++ b/src/components/NotifyMePopup/styles.scss
@@ -141,6 +141,7 @@ span{
         width: auto;
         max-width: 50vw;
         min-height: 20vh;
+        min-width: 600px;
     }
     .content-container {
         padding-left: 50px !important;
