Mobile Slider Issue left

--- a/src/components/NotifyMePopup/styles.scss
+++ b/src/components/NotifyMePopup/styles.scss
@@ -110,6 +110,9 @@
     left: 0;
     background-color: $aquablue !important;
     color: white;
+    &:hover{
+        color: white !important
+    }
 }
 
 .success-msg {
