--- a/src/containers/pdp/components/productDetails/styles.scss
+++ b/src/containers/pdp/components/productDetails/styles.scss
@@ -244,7 +244,7 @@
 
         .mobile-wishlist-icon {
             font-size: 30px;
-            color: tint(#000,60%);
+            color: $gold;
             line-height: 50px;
         }
     }
