--- a/src/components/CartSlider/styles.css
+++ b/src/components/CartSlider/styles.css
@@ -23,3 +23,10 @@
 .pdp-slider .slick-next:hover {
     background-color: #fff;
 }
+
+.pdp-slider .slick-dots li    {
+    display: inline-block;
+    margin: 0 4px;
+    width: auto;
+    height: auto;
+}
