code for cusion bugs

--- a/src/components/Cushion/styles.scss
+++ b/src/components/Cushion/styles.scss
@@ -604,7 +604,7 @@
 }
 
 .more-details {
-  font-family: $font-Lato;
+  font-family:$font-Montserrat;
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: 1px;
@@ -648,6 +648,7 @@ margin-top: 0;
   padding-right: 10px;
   vertical-align: middle;
 }
+
 
 .shop-availability{
   line-height: 50px;
@@ -700,7 +701,7 @@ margin-top: 0;
 }
 
 .mobile-wishlist-icon {
-  font-size: 24px !important;
+  font-size: 26px !important;
   cursor: pointer !important;
   margin-top: 18px !important;
   text-align: center;
