Counter Styling changes

--- a/src/components/ProductCounter/styles.scss
+++ b/src/components/ProductCounter/styles.scss
@@ -28,14 +28,27 @@ z-index: 10;
             display:flex;
             letter-spacing: 0px;
             border:none;
+            &.plp-product-counter {
+                div{
+                    font-family: $font-Montserrat;
+                    font-size: 12px;
+                    letter-spacing: 2px;
+                }
+                .current{
+                    padding-right: 3px;
+                }
+                .total{
+                    padding-left: 3px;
+                }
+            }
         }
         .arrow-container{
-            height: 19px;
-            width: 19px;
+            height: 20px;
+            width: 20px;
             background-color: #F7F7F7;
             display: flex;
             justify-content: space-around;
-            border-radius: 100%;
+            border-radius: 50%;
         }
         .icon {
             font-size: 20px;
