--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -414,6 +414,10 @@ font-weight: bold;
 .paddTop-20 {
   padding-top: 20px;
 }
+
+.paddTop-10 {
+  padding-top: 10px;
+}
 .paddTop-60 {
   padding-top: 60px;
 }
