Bridal Discount Items Issue

--- a/src/containers/myAccount/components/Bridal/styles.scss
+++ b/src/containers/myAccount/components/Bridal/styles.scss
@@ -1409,7 +1409,7 @@ margin-bottom: 50px !important;
   }
 }
 .discountprice {
-  color: $cerise;
+  color: $gold;
   font-family: $font-Serif;
   font-size: 14px;
 }
