change of spacing and size of icons in pdp

--- a/src/containers/pdp/components/productDetails/styles.scss
+++ b/src/containers/pdp/components/productDetails/styles.scss
@@ -294,15 +294,16 @@
 
 
 .badge-img {
-    margin-top: 40px
+    margin-top: 40px;
+    padding: 0px 0px 10px;
 }
 .not-eligible {
     text-align: left;
     margin-top: 5px;
 }
 .cushion-filler {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     padding-right: 10px;
     vertical-align: middle;
 }
