PDP banner discount Price gold

--- a/src/components/SelectedPrice/styles.scss
+++ b/src/components/SelectedPrice/styles.scss
@@ -21,7 +21,7 @@
       letter-spacing: 0.5px;
   }
   .discountprice {
-      color: #ab1e56;
+      color: $gold;
       font-family:  $font-Lato;
       font-size: 14px;
   }
