--- a/src/components/Accordion/styles.scss
+++ b/src/components/Accordion/styles.scss
@@ -35,5 +35,11 @@
     &.closed {
         margin-top: 0px;
         margin-bottom: 0px;
+        position: relative;
+        top:-10000px;
     }
+}
+
+.size-guide-accordion{
+    position:relative;
 }
