--- a/src/containers/pdp/components/productDetails/styles.scss
+++ b/src/containers/pdp/components/productDetails/styles.scss
@@ -9,7 +9,7 @@
 }
 
 .side-container{
-    margin-top: 30px;
+    // margin-top: 30px;
     margin-left:8.33333%
 }
 
@@ -294,7 +294,7 @@
 
 
 .badge-img {
-    margin-top: 40px
+    // margin-top: 40px
 }
 .not-eligible {
     text-align: left;
