--- a/src/components/PdpSlider/styles.scss
+++ b/src/components/PdpSlider/styles.scss
@@ -2,7 +2,7 @@
 @import "../../styles/partials/mixins";
 
 .image-container {
-    padding: 1px;
+    // padding: 1px;
     // border: 1px solid transparent;
     position: relative;
     &:not(:last-child) {
@@ -12,7 +12,11 @@
 }
 
 .active {
+    background: #fff;
     border: 1px solid gray;
+    -webkit-box-shadow: 0 2px 2px rgba(0,0,0,0.19), 0 2px 2px rgba(0,0,0,0.23);
+    -moz-box-shadow:    0 2px 2px rgba(0,0,0,0.19), 0 2px 2px rgba(0,0,0,0.23);
+    box-shadow:         0 2px 2px rgba(0,0,0,0.19), 0 2px 2px rgba(0,0,0,0.23);
 }
 
 .clickable {
@@ -29,7 +33,10 @@
     padding-left: 80px;
     margin-top: 30px;
     .image-container {
-        padding: 4px;
+        // padding: 4px;
+        &:not(:last-child){
+            margin-right: 10px;
+        }
     }
 }
 
