PDP Image Arrows

--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -289,34 +289,42 @@ input[type="time"]::-webkit-calendar-picker-indicator{
   }
 
 .image-arrow-left {
+    border: solid #FFF;
+    border-width: 0 5px 5px 0;
+    padding: 15px;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
-    left: 0;
-    font-size: 60px;
+    -webkit-transform: translateY(-50%) rotate(135deg);
+    -moz-transform: translateY(-50%) rotate(135deg);
+    transform: translateY(-50%) rotate(135deg);
+    left: 20px;
     display: none;
-    color: #E5E5E5;
+    box-shadow: 4px 4px 4px 0px #00000034;
     &:hover{
         cursor: pointer;
     }
     &.show{
-        display: block;
+        display: inline-block;
     }
 }
 
 .image-arrow-right {
+    border: solid #FFF;
+    border-width: 0 5px 5px 0;
+    padding: 15px;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
-    right: 0;
-    font-size: 60px;
+    -webkit-transform: translateY(-50%) rotate(-45deg);
+    -moz-transform: translateY(-50%) rotate(-45deg);
+    transform: translateY(-50%) rotate(-45deg);
+    right: 20px;
     display: none;
-    color: #E5E5E5;
+    box-shadow: 4px 4px 4px 0px #00000034;
     &:hover{
         cursor: pointer;
     }
     &.show{
-        display: block;
+        display: inline-block;
     }
 }
 
