--- a/src/components/PdpSlider/styles.scss
+++ b/src/components/PdpSlider/styles.scss
@@ -14,9 +14,9 @@
 .active {
     background: #fff;
     border: 1px solid gray;
-    -webkit-box-shadow: 0 2px 2px rgba(0,0,0,0.19), 0 2px 2px rgba(0,0,0,0.23);
-    -moz-box-shadow:    0 2px 2px rgba(0,0,0,0.19), 0 2px 2px rgba(0,0,0,0.23);
-    box-shadow:         0 2px 2px rgba(0,0,0,0.19), 0 2px 2px rgba(0,0,0,0.23);
+    -webkit-box-shadow: 0 0 4px -4px;
+    -moz-box-shadow:    0 0 4px -4px;
+    box-shadow:         0 0 4px -4px;
 }
 
 .clickable {
