--- a/src/components/Modal/styles.scss
+++ b/src/components/Modal/styles.scss
@@ -31,9 +31,9 @@
 @media screen and (max-width: 992px) {
   .body {
     width: 100%;
-    top: 20vw;
-    left: 0;
-    transform: none;
+    // top: 20vw;
+    // left: 0;
+    // transform: none;
   }
 
   .bottom-align {
