--- a/src/containers/pdp/components/productDetails/styles.scss
+++ b/src/containers/pdp/components/productDetails/styles.scss
@@ -31,6 +31,7 @@
     font-family: $font-Montserrat;
     font-size: 20px;
     // font-weight: bold;
+    line-height: 25px;
     text-align: right !important;
     padding: 10px 0px;
 }
