--- a/src/components/quantity/styles.scss
+++ b/src/components/quantity/styles.scss
@@ -66,7 +66,7 @@
     font-family: $font-Lora;
     font-size: 14px;
     letter-spacing: 0.28px;
-    font-style: normal;
+    font-style: italic;
     font-weight: normal;
     padding: 3px 0px 6px 0px;
     margin-bottom: 10px;
