--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -407,7 +407,7 @@
   font-style: italic;
   color: $cerise;
   font-weight: bold;
-  font-family: $font-Lato;
+  font-family: $font-Lora;
   letter-spacing: 1px;
   // text-transform: lowercase;
   &::first-letter {
