--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -8,7 +8,7 @@ $font-MrsEaves: "MrsEaves";
 $border: 1px solid tint(#000, 80%);
 $bp-xlarge: 120em; //breakpoint 1920px
 $font-Montserrat: "Montserrat";
-$font-Lora: "Lora";
+$font-Lora: "Lora", serif;
 
 // Colors
 $light-bg: tint(#000, 95%);
