--- a/src/components/plpResultItem/styles.scss
+++ b/src/components/plpResultItem/styles.scss
@@ -202,8 +202,8 @@
     z-index: 3;
     left: 0;
     img {
-        width: 70%;
-        margin: 10px 0 0 10px;
+        position: absolute;
+        top: 20px;
     }
 }
 .badge-image-mobile{
@@ -213,8 +213,8 @@
     z-index: 3;
     left: 0;
     img {
-        width: 100%;
-        margin: 6px 0 0 6px;
+        position: absolute;
+        top: 15px;
     }
 }
 
