--- a/src/components/Bag/styles.scss
+++ b/src/components/Bag/styles.scss
@@ -341,10 +341,11 @@
 }
 
 .badge-position-plp-mobile {
-    width: 60%;
-    top: 0;
-    position: absolute;
+    position: relative;
     z-index: 4;
   img {
+    position: absolute;
+    width: 60%;
+    top: 5px;
   }
 }
