--- a/src/components/plpResultItem/styles.scss
+++ b/src/components/plpResultItem/styles.scss
@@ -196,19 +196,18 @@
 
 
 .badge-image {
-    width: 30%;
-    position: absolute;
-    top: 0;
+    position: relative;
     z-index: 3;
-    left: 0;
     img {
         position: absolute;
         top: 20px;
+        width: 30%;
+        left: 0;
     }
 }
 .badge-image-mobile{
     width: 30%;
-    position: absolute;
+    position: relative;
     top: 0;
     z-index: 3;
     left: 0;
