--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -332,7 +332,7 @@ input[type="time"]::-webkit-calendar-picker-indicator{
     justify-content: center;
 }
 
-.bottomPanel{
+.bottom-panel{
     width: 100%;
     height: 80px;
     position: -webkit-sticky;
