--- a/src/components/NotifyMePopup/styles.scss
+++ b/src/components/NotifyMePopup/styles.scss
@@ -65,6 +65,7 @@
 }
 .qty-container {
     display: flex;
+    flex-direction: column;
     margin-bottom: 20px;
     justify-content: center;
     position: relative;
