--- a/src/components/PdpSlider/styles.scss
+++ b/src/components/PdpSlider/styles.scss
@@ -12,17 +12,19 @@
 }
 
 .active {
-    background: #fff;
-    border: 1px solid gray;
-    -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0,.2),
-                        -2px 2px 2px rgba(0, 0, 0,.4),
-                        2px -2px 2px rgba(0, 0, 0,.2);
-    -moz-box-shadow:    2px 2px 2px rgba(0, 0, 0,.2),
-                        -2px 2px 2px rgba(0, 0, 0,.4),
-                        2px -2px 2px rgba(0, 0, 0,.2);
-    box-shadow:         2px 2px 2px rgba(0, 0, 0,.2),
-                        -2px 2px 2px rgba(0, 0, 0,.4),
-                        2px -2px 2px rgba(0, 0, 0,.2);
+    img {
+        background: #fff;
+        border: 1px solid gray;
+        -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0,.2),
+                            -2px 2px 2px rgba(0, 0, 0,.4),
+                            2px -2px 2px rgba(0, 0, 0,.2);
+        -moz-box-shadow:    2px 2px 2px rgba(0, 0, 0,.2),
+                            -2px 2px 2px rgba(0, 0, 0,.4),
+                            2px -2px 2px rgba(0, 0, 0,.2);
+        box-shadow:         2px 2px 2px rgba(0, 0, 0,.2),
+                            -2px 2px 2px rgba(0, 0, 0,.4),
+                            2px -2px 2px rgba(0, 0, 0,.2);
+    }
 }
 
 .clickable {
