--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -305,8 +305,7 @@
   font-family: $font-Montserrat;
   color: $charcoal19;
   text-transform: none;
-  //line-height: 20px;
-  margin-top: 15px;
+  line-height: 20px;
   letter-spacing: 0.36px;
 }
 // @mixin pdp_prod_title_mobile {
