--- a/src/components/Sizechart/styles.scss
+++ b/src/components/Sizechart/styles.scss
@@ -342,6 +342,7 @@
   border-left: 1px solid black;
   position: absolute;
   right: 20px;
+  transition: transform 0.2s ease-in;
   &.open {
     transform: rotate(45deg);
   }
