--- a/src/components/NewAccordion/styles.scss
+++ b/src/components/NewAccordion/styles.scss
@@ -1,8 +1,12 @@
 @import "../../styles/partials/variables";
 @import "../../styles/partials/mixins";
 
+strong {
+    font-weight: bold;
+}
+
 .accordion-section {
-    border-bottom: 1px solid lightgray;
+    box-shadow: 0px 1px 0px lightgrey;
 }
 
 .accordion-header {
@@ -10,6 +14,13 @@
     display: flex;
     justify-content: space-between;
     cursor: pointer;
+}
+
+//Add padding when show
+.accordion-body{
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.3s ease-in;
 }
 
 .arrow {
