PDP Bottom panel

--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -339,6 +339,6 @@ input[type="time"]::-webkit-calendar-picker-indicator{
     position: sticky;
     bottom: 0px;
     z-index: 11;
-    box-shadow: 0px -8px 10px #e6e6e6;
+    box-shadow: -1px -2px 12px #0000001d;
     background: #fff;
 }
