--- a/src/components/PdpSlider/styles.scss
+++ b/src/components/PdpSlider/styles.scss
@@ -9,21 +9,20 @@
         margin-bottom: 10px;
     }
     width: 95%!important;
+    img {
+        border: 2px solid transparent;
+        padding: 2px;
+    }
 }
 
 .active {
     img {
         background: #fff;
-        border: 1px solid gray;
-        -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0,.2),
-                            -2px 2px 2px rgba(0, 0, 0,.4),
-                            2px -2px 2px rgba(0, 0, 0,.2);
-        -moz-box-shadow:    2px 2px 2px rgba(0, 0, 0,.2),
-                            -2px 2px 2px rgba(0, 0, 0,.4),
-                            2px -2px 2px rgba(0, 0, 0,.2);
-        box-shadow:         2px 2px 2px rgba(0, 0, 0,.2),
-                            -2px 2px 2px rgba(0, 0, 0,.4),
-                            2px -2px 2px rgba(0, 0, 0,.2);
+        border: 2px solid gray;
+        padding: 2px;
+        -webkit-box-shadow: -1px -2px 12px #999999;
+        -moz-box-shadow:    -1px -2px 12px #999999;
+        box-shadow:         -1px -2px 12px #999999;
     }
 }
 
