--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -336,6 +336,8 @@ input[type="time"]::-webkit-calendar-picker-indicator{
 .bottom-panel{
     width: 100%;
     height: 80px;
+    max-height: 0px;
+    overflow: hidden;
     position: -webkit-sticky;
     position: sticky;
     bottom: 0px;
@@ -346,6 +348,7 @@ input[type="time"]::-webkit-calendar-picker-indicator{
     padding: 0% 8%;
     flex-direction: column;
     justify-content: center;
+    transition: max-height 0.2s ease-in;
 }
 
 .bottom-dock-price{
