--- a/src/components/InputField/styles.scss
+++ b/src/components/InputField/styles.scss
@@ -41,6 +41,8 @@ input.input {
     font-style: italic;
     font-weight: normal;
     letter-spacing: 0.3px;
+    display: inline-block;
+    margin-top: 6px;
   }
 }
 
