--- a/src/components/SizeSelector/styles.scss
+++ b/src/components/SizeSelector/styles.scss
@@ -19,6 +19,7 @@
     padding: 0 5px;
     letter-spacing: 0.36px;
     position: relative;
+    min-height: 40px;
     &:hover {
       border: 1px solid #799999;
       background-color: #f9f8f5;
