--- a/src/components/SizeSelector/styles.scss
+++ b/src/components/SizeSelector/styles.scss
@@ -38,7 +38,7 @@
       border: #E5E5E5;
       border-style: solid;
       border-width: 1px;
-      background: linear-gradient(to left top, transparent 47.75%, currentColor 50.5%, currentColor 49.5%, transparent 51.25%);
+      background: linear-gradient(to left top, #f9f8f5 47.75%, currentColor 50.5%, currentColor 49.5%, #f9f8f5 51.25%);
       &:hover {
         // background-color: tint(#000,95%);
         border: #E5E5E5;
