--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -338,8 +338,7 @@ input[type="time"]::-webkit-calendar-picker-indicator{
     height: 80px;
     max-height: 0px;
     overflow: hidden;
-    position: -webkit-sticky;
-    position: sticky;
+    position: fixed;
     bottom: 0px;
     z-index: 11;
     box-shadow: -1px -2px 12px #0000001d;
