dropdown bug resolved

--- a/src/components/dropdown/baseDropdownMenu/styles.scss
+++ b/src/components/dropdown/baseDropdownMenu/styles.scss
@@ -86,7 +86,7 @@
   &:last-child {
     border-bottom: none;
   }
-  a{
+  span, a{
     font-size: 10px;
     font-weight: normal;
     font-family: $font-Lato;
