--- a/src/server/templates/index.pug
+++ b/src/server/templates/index.pug
@@ -192,9 +192,9 @@ html(lang='en')
             });
           }
           //- default freshchat script
-          function initialize(i,t){var e;i.getElementById(t)?initFreshChat():setTimeout(function() {((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}, 100)}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
+          //- function initialize(i,t){var e;i.getElementById(t)?initFreshChat():setTimeout(function() {((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}, 100)}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
 
-            //- function initialize(i,t){var e;i.getElementById(t)?initFreshChat():setTimeout(function() {((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}, 100)}
+            function initialize(i,t){var e;i.getElementById(t)?initFreshChat():setTimeout(function() {((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}, 100)}
 
           function ScrollToTop() {
               window.scrollTo({
@@ -243,10 +243,10 @@ html(lang='en')
         div(id="chat-container" class='chat-container')
           div(id='scrollToTop-btn' class='scrollToTop-btn-hidden' onClick='ScrollToTop()')
             i(class='icon_uparrow-white')
-          a(href='https://wa.me/+917669303665' target='_blank' rel='noopener noreferrer')
-            div(id='whatsapp' class='whatsapp-img whatsapp-active')
-              //- img(src="/static/images/whatsapp.svg", alt="whatsapp icon" width='40px')
-          div(id='fresh-chat', onclick='OpenChatBox()', class='fresh-chat active')
-            i(class='icon-chat')
-          div(id='chat-button', onclick='OpenBox()', class='chat-button active')
-            i(class='icon-question')
+          //- a(href='https://wa.me/+917669303665' target='_blank' rel='noopener noreferrer')
+          //-   div(id='whatsapp' class='whatsapp-img whatsapp-active')
+          //-     //- img(src="/static/images/whatsapp.svg", alt="whatsapp icon" width='40px')
+          //- div(id='fresh-chat', onclick='OpenChatBox()', class='fresh-chat active')
+          //-   i(class='icon-chat')
+          //- div(id='chat-button', onclick='OpenBox()', class='chat-button active')
+          //-   i(class='icon-question')
