--- a/src/components/weRecomend/styles.scss
+++ b/src/components/weRecomend/styles.scss
@@ -27,10 +27,10 @@
     position: absolute;
     top: 0;
     z-index: 4;
-    left: 6px;
+    // left: 6px;
     img {
         width: 100%;
-        margin: 10px;
+        margin-top: 10px;
     }
 }
 
