--- a/src/server/templates/index.pug
+++ b/src/server/templates/index.pug
@@ -45,7 +45,7 @@ html(lang='en')
           });
           Moengage.call_web_push();
         link(rel="manifest", href=`${manifest}`)
-        meta(name="viewport",content="width=device-width, initial-scale=1")
+        meta(name="viewport",content="width=device-width, initial-scale=1, , maximum-scale=1")
         meta(name="theme-color",content="#ffffff")
         link(rel="apple-touch-icon", href="/static/icon_512x512.png")
         link(rel="preload", href=`${cdn}/media/fonts/Franklin%20Gothic%20Medium.ttf`, as="font", crossorigin)
