--- a/src/components/NotifyMePopup/styles.scss
+++ b/src/components/NotifyMePopup/styles.scss
@@ -62,6 +62,7 @@
     font-size: 20px;
     line-height: 30px;
     font-family: $font-Montserrat;
+    text-align: right;
 }
 .qty-container {
     display: flex;
