--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -67,6 +67,7 @@
   .mobile-chat-container {
     bottom: 60px !important;
     right: 10px !important;
+    display: none;
   }
 
   div#lc_chat_layout.lc-collapsed {
