--- a/src/components/moreCollection/styles.scss
+++ b/src/components/moreCollection/styles.scss
@@ -69,7 +69,7 @@
     position: absolute;
     top: 0;
     z-index: 4;
-    // left: 6px;
+    left: 3px;
     img {
         width: 80%;
         margin-top: 10px;
