--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -68,6 +68,10 @@
     bottom: 60px !important;
     right: 10px !important;
   }
+  .chat-container .chat-history {
+    height: 350px !important;
+  }
+
   div#lc_chat_layout.lc-collapsed {
     height: 0 !important;
     display: none !important;
