Strike price New Line

--- a/src/components/NotifyMePopup/styles.scss
+++ b/src/components/NotifyMePopup/styles.scss
@@ -136,6 +136,7 @@ span{
         text-decoration: line-through;
         color: #9F9F9F !important;
         font-family: $font-Lato;
+        display: block;
       }
 }
 
