--- a/src/components/NotifyMePopup/styles.scss
+++ b/src/components/NotifyMePopup/styles.scss
@@ -66,6 +66,7 @@
 }
 .qty-container {
     display: flex;
+    flex-direction: column;
     margin-bottom: 20px;
     justify-content: center;
     position: relative;
