--- a/src/components/NotifyMePopup/styles.scss
+++ b/src/components/NotifyMePopup/styles.scss
@@ -125,7 +125,22 @@
 
 .size-error {
     @include error-msg();
+    text-align: center;
+    width: 100%;
+    word-break: break-word;
+    height: 15px;
+    line-height: 15px;
+    // left: 5px;
+    color: $cerise;
+    font-family: $font-Lora;
+    font-size: 14px;
+    letter-spacing: 0.28px;
+    font-style: normal;
+    font-weight: normal;
+    padding: 3px 0px 6px 0px;
+    margin: 10px 0px;
 }
+
 span{
     &.discountprice {
         color: $gold;
@@ -179,4 +194,8 @@ span{
         display: flex;
         flex-direction: column;
     }
+}
+
+.sizes-box{
+    margin-bottom: 10px;
 }
