--- a/src/components/Bag/styles.scss
+++ b/src/components/Bag/styles.scss
@@ -109,7 +109,7 @@
           margin-top: 15px;
           .stock-left {
             position: static !important;
-            text-align: center;
+            text-align: left;
             top: 25px;
           }
         }
