--- a/src/containers/pdp/components/productDetails/styles.scss
+++ b/src/containers/pdp/components/productDetails/styles.scss
@@ -278,6 +278,7 @@
 .widget-qty {
     display: flex;
     width: 100%;
+    flex-direction: column;
     // margin-top: 10px;
     // min-width: 120px;
     // display: inline-flex;
