--- a/src/server/templates/index.pug
+++ b/src/server/templates/index.pug
@@ -243,8 +243,8 @@ html(lang='en')
         div !{newrelicScript}
         div !{scripts}
         //- div(id="chat-container" class='chat-container')
-        div(id='scrollToTop-btn' class='scrollToTop-btn-hidden' onClick='ScrollToTop()')
-          i(class='icon_uparrow-white')
+        //- div(id='scrollToTop-btn' class='scrollToTop-btn-hidden' onClick='ScrollToTop()')
+        //-   i(class='icon_uparrow-white')
           //- a(href='https://wa.me/+917669303665' target='_blank' rel='noopener noreferrer')
           //-   div(id='whatsapp' class='whatsapp-img whatsapp-active')
           //-     //- img(src="/static/images/whatsapp.svg", alt="whatsapp icon" width='40px')
