--- a/src/containers/pdp/styles.scss
+++ b/src/containers/pdp/styles.scss
@@ -353,3 +353,7 @@ input[type="time"]::-webkit-calendar-picker-indicator{
     font-size: 20px !important;
     font-family: $font-Montserrat !important;
 }
+
+.dock-container{
+    align-items: center;
+}
