--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -40,7 +40,7 @@
     }
     &.notify-me-cta{
         background-color: #9F9F9F;
-        border: none;
+        border: 2px solid #9F9F9F;
         &:hover{
             color: white;
         }
